# tempstick-py

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_freeze.txt
source/: conf.py  examples.rst  index.rst  modules.rst  tempstick_py.rst
source/custom-extensions/: extensions.py
src/tempstick_py/: __about__.py  _helpers.py  exceptions.py  tempstick.py
test/: data.py  unittest.py
